--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
       <hr />
 
-      <div class="cta">Coming Soon ...</div>
+      <div class="cta">Coming Soon ....</div>
     </div>
   </body>
 </html>
